--- a/public_html/bibliotecasEspana.html
+++ b/public_html/bibliotecasEspana.html
@@ -5,9 +5,23 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<script src="index.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+    <div class="container">
+        <div class="row">
+          
+          <div class="col-sm-4">
+            <label for="mySearch">Search...</label>
+            <input class="form-control" type="text" id="mySearch" onkeyup="search()" placeholder="Search.."
+              title="Type in a category">
+          </div>
+        </div>
+      </div>
+      <br>
+
 <div class="container">
 <table class="table table-striped">
 <thead>
@@ -15,7 +29,7 @@
 <th>Institucion</th><th>Direccion</th><th>Localidad</th><th>Pais</th>
 </tr>
 </thead>
-<tbody>
+<tbody id="my-tbody">
 <tr>
 <td>Instituto Cervantes</td><td>15-19 Devereux Court</td><td>Londres</td><td>Reino Unido</td>
 </tr>
