--- a/public_html/bibliotecasEspana.html
+++ b/public_html/bibliotecasEspana.html
@@ -18,6 +18,7 @@
             <input class="form-control" type="text" id="mySearch" onkeyup="search()" placeholder="Search.."
               title="Type in a category">
           </div>
+            <button type="button" href="index.html" class="btn btn-primary col-sm-4">Ordenar por Pais</button>
         </div>
       </div>
       <br>
